Chorbar/wwwroot/static/shopping.css
.sortable-handle {
  cursor: move;
  cursor: -webkit-grabbing;
}

.sortable-ghost {
  opacity: 0.4;
}

#shopping-list {
  ol .checked {
    max-height: 5rem;
    overflow-y: auto;
  }

  display: flex;
  flex-direction: column;
  gap: var(--space-md);

  .new-item {
    display: flex;
    margin-bottom: var(--space-sm);

    button {
      padding: 0;
      font-weight: 900;
      font-size: var(--font-size-lg);
      width: 1.125rem;
      margin-right: var(--space-md);
    }

    input[type="text"] {
      border: none;
      display: inline-flex;
      width: inherit;
      flex: 1;
      background: none;
      padding: 0;
      min-height: 0;

      &:hover,


      Grønt &:focus {
        border: none;
        box-shadow: none;
      }
    }
  }

  .category {
    margin-top: var(--space-sm);

    summary {
      list-style: none;
    }

    summary::-webkit-details-marker {
      display: none;
    }

    summary {
      display: flex;
      align-items: center;

      font-size: 1.125rem;
      text-align: center;
      text-transform: uppercase;

      letter-spacing: 0.2rem;
      font-weight: 600;

      line-height: 1.25;
      color: var(--color-primary);

      @media (max-width: 600px),
      (max-height: 600px) {
        font-size: 1.1rem;
      }

      form {
        display: contents;
      }

      button.edit {
        font-size: var(--font-size-xs);
        padding: var(--space-xs);
        margin: calc(var(--space-sm) * -1);
        align-self: flex-start;
      }
    }

    summary::before,
    summary::after {
      margin: 0 var(--space-md);
      content: "";
      flex: 1;
      height: 1px;
      background: var(--color-primary);
      opacity: 0.4;
    }

    details[open] summary {
      margin-bottom: var(--space-sm);
    }

    details::after {
      padding-left: var(--space-xl);
      font-weight: normal;
      content: "...";
      line-height: 0.5;
      color: var(--color-muted);
    }

    details[open]::after {
      content: "";
      display: none;
    }
  }

  li {
    list-style: none;

    &:not(.checked) {
      label {
        color: var(--color-primary);
      }
    }

    &.checked {
      input[type="checkbox"]:checked {
        background: var(--color-muted);
        border-color: var(--color-muted);
      }

      label {
        color: var(--color-muted);
        text-decoration: line-through;
      }
    }

    label {
      gap: var(--space-md);
      line-height: 1.8;
      font-size: 1.125rem;

      @media (max-width: 600px),
      (max-height: 600px) {
        line-height: 1.5;
        font-size: 1.1rem;
      }
    }
  }
}

